k8s/istio-system-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-istio-vs
  namespace: istio-config
spec:
  gateways:
  - admin-gw
  hosts:
  - "grafana-istio.santier.es"
  http:
  - route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-istio-vs
  namespace: istio-config
spec:
  gateways:
  - admin-gw
  hosts:
  - "kiali-istio.santier.es"
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-istio-vs
  namespace: istio-config
spec:
  gateways:
  - admin-gw
  hosts:
  - "tracing-istio.santier.es"
  http:
  - route:
    - destination:
        host: tracing.istio-system.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-istio-vs
  namespace: istio-config
spec:
  gateways:
  - admin-gw
  hosts:
  - "prometheus-istio.santier.es"
  http:
  - route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090
